--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #ffffff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -15,8 +19,12 @@ code {
 :root {
   --blue-color: #0365d6;
   --green-color: #2cbe4e;
-  --red-color: #E81224;
+  --red-color: #e81224;
   --icon-fill-color: #80868b;
   --title-color: #181d20;
   --subtitle-color: #444857;
+}
+
+.react-tooltip-lite {
+  font-family: "Helvetica";
 }
